<resources>
    <string name="app_name">Notebook</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="adding_note">Add Note</string>
    <string name="enter_the_tittle">Enter the tittle</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="editing_note">Edit Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_example">TEXT_EXAMPLE</string>
    <string name="btnadd">btnAdd</string>
    <string name="title">Title</string>
    <string name="creation_date">Created on:</string>
    <string name="finished_date">Finished on:</string>
    <string name="description">Description</string>
    <string name="create_note">Create Note</string>
    <string name="select_priority">Select priority</string>
    <string name="pick_final_date">Pick final date</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick time</string>
    <string name="press_the_button_left">Press the button left</string>
</resources>